# libtk205

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: build-and-test.yml
doc-sphinx/source/: conf.py
docs/: CMakeLists.txt  Doxyfile.in
docs/sphinx-source/: conf.py  index.rst
include/libtk205/: ASHRAE205.h  RS0001.h  RS0001_factory.h  RS0002.h  RS0002_factory.h  RS0003_factory.h  RS0004_factory.h  RS0005_factory.h  RS0006_factory.h  RS0007_factory.h  ashrae205.h  libtk205.h  rs0001.h  rs0001_factory.h  rs0002.h  rs0002_factory.h  rs0003.h  rs0003_factory.h  rs0004.h  rs0004_factory.h  rs0005.h  rs0005_factory.h  rs0006.h  rs0006_factory.h  rs0007.h  rs0007_factory.h
src/: ASHRAE205.cpp  CMakeLists.txt  RS0001.cpp  RS0001_factory.cpp  RS0002_factory.cpp  RS0003_factory.cpp  RS0004_factory.cpp  RS0005.cpp  RS0005_factory.cpp  RS0006_factory.cpp  RS0007.cpp  RS0007_factory.cpp  ashrae205.cpp  libtk205.cpp  rs0001.cpp  rs0001_factory.cpp  rs0002.cpp  rs0002_factory.cpp  rs0003.cpp  rs0003_factory.cpp  rs0004.cpp  rs0004_factory.cpp  rs0005.cpp  rs0005_factory.cpp  rs0006.cpp  rs0006_factory.cpp  rs0007.cpp  rs0007_factory.cpp
test/: CMakeLists.txt  fixtures_libtk205.hpp  main_libtk205.cpp
